# wardrivingmapper-pi

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: design.md  wardriving-pipeline.md
include/: lv_conf.h
scripts/: install-service.sh  optimize-sdcard.sh
src/: main.c
src/platform/: platform_stub.c  wdm_platform.h  wdm_tick.h
src/ui/: screens.c  screens.h  strutil.c  strutil.h
